Add the Little Cljer doc to the docs folder

--- a/README
+++ b/README
@@ -1,8 +1,7 @@
--*- mode:org; -*-
-
-
-* Vedang Learns Stuff.
+# Vedang Learns Stuff.
 
 I get down to the business of learning things. There may be some
 things in this repository that someone else may find useful, but I
 doubt it.
+
+## [The Little Schemer](http://vedang.me/learns_stuff/little-cljer.html)
